# exapaths-dev

./: README.md  setup.cfg
cloudpaths/: aws_utils.py  batchorchestrators.py  create_task_graph.py  lambda_utils.py  run_task.py  slurm.py  worker.py
cloudpaths/dag/: dag.py  group_tasks.py  test_dag.py  test_group_tasks.py
cloudpaths/move_to_ops/: preplanned.py  storage_handlers.py  test_storage_handler.py
exapaths/: aws_utils.py  batchorchestrators.py  create_task_graph.py  deploy.py  run_task.py  simulation.py  slurm.py  taskdb.py  worker.py
exapaths/cloudinfra/: cluster.yaml  initialsetup.yaml
exapaths/dag/: create_batched_dag.py  dag.py  group_tasks.py  test_dag.py  test_group_tasks.py
exapaths/lambdas/: launch_run.py  result_handler.py
exapaths/move_to_ops/: preplanned.py  tasknodes.py  test_preplanned.py
