[metadata]
name = exapaths
version = 0.0.1.dev0
# version should end in .dev0 if this isn't to be released
short_description =
    OpenPathSampling in the cloud
description = 
    OpenPathSampling in the cloud
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
author_email = dwhs@hyperblazer.net
license = MIT
url = https://github.com/openpathsampling/exapaths
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.10
install_requires =
    boto3  # TODO: remove boto3 from core reqs
    click
    openpathsampling
    openpathsampling-cli >=0.3
packages = find:

[options.extras_require]
aws =
    boto3
test = 
    exapaths[aws]  # test will require the AWS tooling
    pytest
    pytest-cov
    moto[all]
